<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextProducto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/id_nombre_prod" />

    <EditText
        android:id="@+id/editTextCoste"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/id_coste_prd"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/editTextCant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/id_num_uds" />


</LinearLayout>
